import {getTester} from './utils/test.js';

const {test} = getTester(import.meta);

test.snapshot({
	valid: [
		'{}',
		'{"scripts": null}',
		'{"scripts": []}',
		'{"scripts": "node_modules/.bin/eslint"}',
		'{"scripts": {}}',
		'{"scripts": {"test": null, "build": false, "lint": 42}}',
		'{"scripts": {"lint": "eslint .", "test": "npm run lint && node --test"}}',
		'{"scripts": {"lint": ""}}',
		// Paths used as arguments, assignments, or redirection targets are not commands.
		'{"scripts": {"test": "node --inspect node_modules/.bin/jest"}}',
		'{"scripts": {"test": "echo node_modules/.bin/eslint"}}',
		'{"scripts": {"test": "cat node_modules/.bin/eslint"}}',
		'{"scripts": {"test": "test -x node_modules/.bin/eslint"}}',
		'{"scripts": {"test": "BIN=node_modules/.bin/eslint node test.js"}}',
		'{"scripts": {"test": "echo value > node_modules/.bin/foo"}}',
		'{"scripts": {"test": "echo value 2>&1 node_modules/.bin/foo"}}',
		String.raw`{"scripts": {"test": "echo \\; node_modules/.bin/eslint"}}`,
		String.raw`{"scripts": {"test": "echo \\& node_modules/.bin/eslint"}}`,
		String.raw`{"scripts": {"test": "echo \\| node_modules/.bin/eslint"}}`,
		// Only local .bin paths, not other package installations or arbitrary package files.
		'{"scripts": {"test": "../node_modules/.bin/eslint"}}',
		'{"scripts": {"test": "packages/foo/node_modules/.bin/eslint"}}',
		'{"scripts": {"test": "/project/node_modules/.bin/eslint"}}',
		'{"scripts": {"test": "node_modules/eslint/bin/eslint.js"}}',
		'{"scripts": {"test": "node_modules/.bin/"}}',
		'{"scripts": {"test": "node_modules/.bin/foo/bar"}}',
		'{"scripts": {"test": "node_modules/.bin/$TOOL"}}',
		'{"bin": "node_modules/.bin/eslint", "config": {"command": "node_modules/.bin/eslint"}}',
		// Do not interpret quoted arguments, nested shell strings, or comments as commands.
		'{"scripts": {"test": "echo \'example && node_modules/.bin/eslint\'"}}',
		'{"scripts": {"test": "sh -c \'node_modules/.bin/eslint\'"}}',
		'{"scripts": {"test": "# example && node_modules/.bin/eslint"}}',
		'{"scripts": {"test": "echo ok # example && node_modules/.bin/eslint"}}',
		String.raw`{"scripts": {"test": "echo \"example \\\n && node_modules/.bin/eslint\""}}`,
		String.raw`{"scripts": {"test": "LABEL=\"example \\\n && node_modules/.bin/eslint\" node test.js"}}`,
		String.raw`{"scripts": {"test": "echo \"example \\\" && node_modules/.bin/eslint\""}}`,
		// Wrappers and compound shell syntax are outside the rule's scope.
		'{"scripts": {"test": "cross-env NODE_ENV=test node_modules/.bin/jest"}}',
		'{"scripts": {"test": ">output.txt node_modules/.bin/eslint"}}',
		'{"scripts": {"test": "if node_modules/.bin/eslint; then echo ok; fi"}}',
		// Only effective scripts are checked.
		'{"scripts": {"test": "node_modules/.bin/eslint", "test": "eslint"}}',
		'{"scripts": {"test": "node_modules/.bin/eslint"}, "scripts": {"test": "eslint"}}',
	],
	invalid: [
		'{"scripts": {"lint": "node_modules/.bin/eslint ."}}',
		'{"scripts": {"test": "./node_modules/.bin/jest --runInBand"}}',
		'{"scripts": {"lint": "  node_modules/.bin/eslint .  "}}',
		'{"scripts": {"lint": "\'./node_modules/.bin/eslint\' ."}}',
		String.raw`{"scripts": {"lint": "\"node_modules/.bin/eslint\" ."}}`,
		String.raw`{"scripts": {"lint": "node_modules\\.bin\\eslint.cmd ."}}`,
		String.raw`{"scripts": {"lint": ".\\node_modules\\.bin\\eslint.cmd ."}}`,
		'{"scripts": {"test": "NODE_ENV=test CI=1 node_modules/.bin/jest"}}',
		'{"scripts": {"test": "LABEL=\'hello world\' node_modules/.bin/jest"}}',
		'{"scripts": {"lint": "npm run build && node_modules/.bin/eslint ."}}',
		'{"scripts": {"lint": "npm run build||./node_modules/.bin/eslint ."}}',
		'{"scripts": {"lint": "echo input | node_modules/.bin/foo"}}',
		'{"scripts": {"lint": "echo ok;node_modules/.bin/eslint ."}}',
		'{"scripts": {"lint": "echo ok & node_modules/.bin/eslint ."}}',
		String.raw`{"scripts": {"lint": "echo ok\nnode_modules/.bin/eslint ."}}`,
		'{"scripts": {"lint": "node_modules/.bin/eslint>output.txt"}}',
		String.raw`{"scripts": {"test": "node_modules/.bin/jest --config \"test/config.json\""}}`,
		'{"scripts": {"test": "node_modules/.bin/foo-bar_2.js"}}',
		// One suggestion handles every direct invocation, preserving arguments.
		'{"scripts": {"test": "node_modules/.bin/foo node_modules/.bin/bar && ./node_modules/.bin/bar"}}',
		'{"scripts": {"test": "echo \'a && b\' && node_modules/.bin/jest"}}',
		String.raw`{"scripts": {"test": "# node_modules/.bin/foo\nnode_modules/.bin/jest"}}`,
		'{"scripts": {"test": "eslint", "test": "node_modules/.bin/eslint"}}',
		'{"scripts": {"test": "node_modules/.bin/jest", "test": "node_modules/.bin/eslint"}}',
		'{"scripts": {"test": "eslint"}, "scripts": {"test": "node_modules/.bin/eslint"}}',
		'{"scripts": {"pretest": null, "test": "node_modules/.bin/jest", "lint": "node_modules/.bin/eslint"}}',
		'{\n\t"scripts": {\n\t\t"test": "./node_modules/.bin/jest && node_modules/.bin/eslint ."\n\t}\n}',
		String.raw`{"scripts": {"lint": "\".\\node_modules\\.bin\\eslint.cmd\" ."}}`,
		String.raw`{"scripts": {"test": "echo \"example \\\n && node_modules/.bin/foo\" && node_modules/.bin/eslint"}}`,
		String.raw`{"scripts": {"test": "echo \\; node_modules/.bin/foo && node_modules/.bin/eslint"}}`,
		String.raw`{"scripts": {"test": "node_modules/.bin/jest\r\nnode_modules/.bin/eslint"}}`,
	],
});
